--- a/MuZest/Base.lproj/Main.storyboard
+++ b/MuZest/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_0" orientation="portrait">
+    <device id="retina6_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -14,36 +14,35 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MuZest" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="bgLogin" translatesAutoresizingMaskIntoConstraints="NO" id="3rf-Jo-2pD">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="login_bg" translatesAutoresizingMaskIntoConstraints="NO" id="fxS-OM-lUd">
-                                <rect key="frame" x="34" y="83" width="250" height="400"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" insetsLayoutMarginsFromSafeArea="NO" image="login_bg" translatesAutoresizingMaskIntoConstraints="NO" id="fxS-OM-lUd">
+                                <rect key="frame" x="35" y="85" width="344" height="400"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="logo_blue" translatesAutoresizingMaskIntoConstraints="NO" id="bcF-V0-hXD">
-                                <rect key="frame" x="80" y="117" width="160" height="72"/>
+                                <rect key="frame" x="127" y="130" width="160" height="46"/>
                             </imageView>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="password" textAlignment="center" minimumFontSize="25" background="username_v2" translatesAutoresizingMaskIntoConstraints="NO" id="wtd-oy-OEm">
-                                <rect key="frame" x="63" y="274" width="195" height="50"/>
+                                <rect key="frame" x="63" y="274" width="289" height="50"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="username" textAlignment="center" minimumFontSize="25" background="username_v2" translatesAutoresizingMaskIntoConstraints="NO" id="jtv-sm-fWW">
-                                <rect key="frame" x="62" y="216" width="195" height="50"/>
+                                <rect key="frame" x="62" y="216" width="289" height="50"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vsf-cj-7RZ">
-                                <rect key="frame" x="87" y="332" width="146" height="26"/>
+                                <rect key="frame" x="87" y="332" width="240" height="26"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                 <state key="normal" title="Forgot password">
@@ -51,7 +50,7 @@
                                 </state>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fMG-KD-tiy">
-                                <rect key="frame" x="62" y="372" width="195" height="50"/>
+                                <rect key="frame" x="62" y="372" width="289" height="50"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <state key="normal" title="Log in" backgroundImage="log_in_btn_2">
@@ -59,7 +58,7 @@
                                 </state>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qUm-8y-w3i">
-                                <rect key="frame" x="73" y="436" width="175" height="25"/>
+                                <rect key="frame" x="73" y="436" width="269" height="25"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                 <state key="normal" title="Create new Account">
@@ -72,8 +71,10 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="fxS-OM-lUd" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="Ccn-lb-qxO"/>
+                            <constraint firstItem="bcF-V0-hXD" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="FuP-mb-TqI"/>
                             <constraint firstItem="bcF-V0-hXD" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="IV6-Jo-oyF"/>
-                            <constraint firstItem="bcF-V0-hXD" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" id="fbt-Hu-EEB"/>
+                            <constraint firstItem="fxS-OM-lUd" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="QWJ-9b-sG9"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -87,47 +88,47 @@
             <objects>
                 <viewController id="08j-28-IGk" customClass="RegisterView" customModule="MuZest" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8og-GH-zFz">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="bgLogin" translatesAutoresizingMaskIntoConstraints="NO" id="WRa-gq-AL4">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="login_bg" translatesAutoresizingMaskIntoConstraints="NO" id="aG3-0I-yz1">
-                                <rect key="frame" x="35" y="85" width="250" height="400"/>
+                                <rect key="frame" x="35" y="85" width="344" height="400"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
                             </imageView>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="username" textAlignment="center" minimumFontSize="25" background="username_v2" translatesAutoresizingMaskIntoConstraints="NO" id="CId-ZI-AlD">
-                                <rect key="frame" x="62" y="161" width="195" height="45"/>
+                                <rect key="frame" x="62" y="161" width="289" height="45"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="password" textAlignment="center" minimumFontSize="25" background="username_v2" translatesAutoresizingMaskIntoConstraints="NO" id="uK7-tu-ere">
-                                <rect key="frame" x="62" y="214" width="195" height="44"/>
+                                <rect key="frame" x="62" y="214" width="289" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="confirm password" textAlignment="center" minimumFontSize="25" background="username_v2" translatesAutoresizingMaskIntoConstraints="NO" id="9JH-qT-KdO" userLabel="passwordConfirm">
-                                <rect key="frame" x="62" y="266" width="195" height="45"/>
+                                <rect key="frame" x="62" y="266" width="289" height="45"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="email" textAlignment="center" minimumFontSize="25" background="username_v2" translatesAutoresizingMaskIntoConstraints="NO" id="62x-Iq-agu">
-                                <rect key="frame" x="62" y="319" width="195" height="45"/>
+                                <rect key="frame" x="62" y="319" width="289" height="45"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eLP-6y-eTr">
-                                <rect key="frame" x="62" y="380" width="195" height="47"/>
+                                <rect key="frame" x="62" y="380" width="289" height="47"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <state key="normal" title="Register" backgroundImage="log_in_btn_2">
@@ -138,7 +139,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MsZ-Wd-Rbd">
-                                <rect key="frame" x="88" y="440" width="143" height="20"/>
+                                <rect key="frame" x="88" y="440" width="237" height="20"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                 <state key="normal" title="Back to Log in">
@@ -149,7 +150,7 @@
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="logo_blue" translatesAutoresizingMaskIntoConstraints="NO" id="H10-m9-HAs">
-                                <rect key="frame" x="80" y="92" width="160" height="65"/>
+                                <rect key="frame" x="127" y="92" width="160" height="65"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="160" id="bvH-Ze-qrl"/>
                                     <constraint firstAttribute="height" constant="65" id="qam-ze-8l3"/>
