--- a/MuZest/Base.lproj/Main.storyboard
+++ b/MuZest/Base.lproj/Main.storyboard
@@ -126,6 +126,12 @@
                                     <constraint firstAttribute="height" constant="400" id="PZi-Yq-NJc"/>
                                 </constraints>
                             </imageView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XH2-dZ-2W3">
+                                <rect key="frame" x="0.0" y="10" width="320" height="568"/>
+                                <connections>
+                                    <outlet property="delegate" destination="08j-28-IGk" id="JCp-dz-d4k"/>
+                                </connections>
+                            </scrollView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_blue" translatesAutoresizingMaskIntoConstraints="NO" id="H10-m9-HAs">
                                 <rect key="frame" x="80" y="92" width="160" height="65"/>
                                 <constraints>
@@ -203,18 +209,22 @@
                             <constraint firstItem="nEu-Pp-sct" firstAttribute="trailing" secondItem="uK7-tu-ere" secondAttribute="trailing" constant="63" id="GQr-B9-hIu"/>
                             <constraint firstItem="nEu-Pp-sct" firstAttribute="trailing" secondItem="eLP-6y-eTr" secondAttribute="trailing" constant="63" id="HOC-3s-jYT"/>
                             <constraint firstItem="MsZ-Wd-Rbd" firstAttribute="leading" secondItem="nEu-Pp-sct" secondAttribute="leading" constant="88" id="Ky6-f9-34b"/>
+                            <constraint firstItem="XH2-dZ-2W3" firstAttribute="centerY" secondItem="nEu-Pp-sct" secondAttribute="centerY" id="L0P-bd-qf6"/>
                             <constraint firstItem="aG3-0I-yz1" firstAttribute="centerY" secondItem="8og-GH-zFz" secondAttribute="centerY" id="MKV-r0-m5w"/>
                             <constraint firstItem="62x-Iq-agu" firstAttribute="centerY" secondItem="8og-GH-zFz" secondAttribute="centerY" constant="57.5" id="MgQ-Pf-Gjc"/>
                             <constraint firstItem="62x-Iq-agu" firstAttribute="leading" secondItem="nEu-Pp-sct" secondAttribute="leading" constant="62" id="TSp-sX-XRz"/>
                             <constraint firstItem="nEu-Pp-sct" firstAttribute="trailing" secondItem="9JH-qT-KdO" secondAttribute="trailing" constant="63" id="V0W-cx-Lzt"/>
+                            <constraint firstItem="XH2-dZ-2W3" firstAttribute="width" secondItem="8og-GH-zFz" secondAttribute="width" id="WDO-5j-XAj"/>
                             <constraint firstItem="MsZ-Wd-Rbd" firstAttribute="centerY" secondItem="8og-GH-zFz" secondAttribute="centerY" constant="166" id="ZDa-0J-h0w"/>
                             <constraint firstItem="aG3-0I-yz1" firstAttribute="centerX" secondItem="8og-GH-zFz" secondAttribute="centerX" id="ZJO-RT-u8y"/>
                             <constraint firstItem="nEu-Pp-sct" firstAttribute="trailing" secondItem="aG3-0I-yz1" secondAttribute="trailing" constant="35" id="fnK-Gc-rmq"/>
                             <constraint firstItem="eLP-6y-eTr" firstAttribute="leading" secondItem="nEu-Pp-sct" secondAttribute="leading" constant="62" id="g2l-iM-1F0"/>
                             <constraint firstItem="CId-ZI-AlD" firstAttribute="centerY" secondItem="8og-GH-zFz" secondAttribute="centerY" constant="-100.5" id="gn8-D5-Y8q"/>
                             <constraint firstItem="9JH-qT-KdO" firstAttribute="leading" secondItem="nEu-Pp-sct" secondAttribute="leading" constant="62" id="hYl-Kh-khw"/>
+                            <constraint firstItem="XH2-dZ-2W3" firstAttribute="centerX" secondItem="nEu-Pp-sct" secondAttribute="centerX" id="iJt-6L-1v1"/>
                             <constraint firstItem="nEu-Pp-sct" firstAttribute="trailing" secondItem="62x-Iq-agu" secondAttribute="trailing" constant="63" id="ifg-6L-6WU"/>
                             <constraint firstItem="CId-ZI-AlD" firstAttribute="leading" secondItem="nEu-Pp-sct" secondAttribute="leading" constant="62" id="j1S-f2-eVe"/>
+                            <constraint firstItem="XH2-dZ-2W3" firstAttribute="height" secondItem="8og-GH-zFz" secondAttribute="height" id="jss-gc-8IJ"/>
                             <constraint firstItem="H10-m9-HAs" firstAttribute="centerX" secondItem="8og-GH-zFz" secondAttribute="centerX" id="n8J-Y0-slb"/>
                             <constraint firstItem="uK7-tu-ere" firstAttribute="centerY" secondItem="8og-GH-zFz" secondAttribute="centerY" constant="-48" id="orH-lQ-Cir"/>
                             <constraint firstItem="nEu-Pp-sct" firstAttribute="trailing" secondItem="MsZ-Wd-Rbd" secondAttribute="trailing" constant="89" id="unP-5t-Evr"/>
@@ -223,6 +233,7 @@
                         <viewLayoutGuide key="safeArea" id="nEu-Pp-sct"/>
                     </view>
                     <connections>
+                        <outlet property="ScrollView" destination="XH2-dZ-2W3" id="hQC-OT-4HF"/>
                         <outlet property="emailTextField" destination="62x-Iq-agu" id="HuP-WU-zNM"/>
                         <outlet property="passwordConfirmTextField" destination="9JH-qT-KdO" id="ySR-K7-blD"/>
                         <outlet property="passwordTextField" destination="uK7-tu-ere" id="iGX-Ov-4P9"/>
