--- a/MuZest/Base.lproj/Main.storyboard
+++ b/MuZest/Base.lproj/Main.storyboard
@@ -207,7 +207,7 @@
                                     <color key="titleColor" red="0.30196078430000001" green="0.4549019608" blue="0.61960784310000006" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="BYZ-38-t0r" kind="show" identifier="toAuth" id="hfT-uY-Fqz"/>
+                                    <action selector="backButtonClicked:" destination="08j-28-IGk" eventType="touchUpInside" id="JXq-YS-A3o"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -250,11 +250,12 @@
                         <outlet property="passwordConfirmTextField" destination="9JH-qT-KdO" id="ySR-K7-blD"/>
                         <outlet property="passwordTextField" destination="uK7-tu-ere" id="iGX-Ov-4P9"/>
                         <outlet property="usernameTextField" destination="CId-ZI-AlD" id="V9F-Ji-b7c"/>
+                        <segue destination="BYZ-38-t0r" kind="show" identifier="toAuth" id="Kf5-Il-aXd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SB8-Oa-Lit" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1080" y="-656"/>
+            <point key="canvasLocation" x="1080" y="-670"/>
         </scene>
         <!--Item 2-->
         <scene sceneID="dOd-1M-TBK">
